<resources>
    <string name="app_name">Индекс массы тела</string>
    <string name="et_height">Введите рост человека в см</string>
    <string name="et_mass">Введите массу тела в кг</string>
    <string name="btn_calculate_ibm">Рассчитать</string>
    <string name="tv_ibm">"Индекс массы тела: "</string>

    <string name="index18">Дефицит массы тела</string>
    <string name="index18_24">Нормальный вес</string>
    <string name="index25_29">Лишний</string>
    <string name="index30_34">Ожирение 1-й степени</string>
    <string name="index35_39">Ожирение 2-й степени</string>
    <string name="index40">Ожирение 3-й степени</string>

    <string name="rec_index18">
        <b>Менее 18.5 – Недостаточная масса тела.\n</b>
        Риски для здоровья: Слабый иммунитет, дефицит витаминов и минералов, повышенная усталость.\n
        \n
        <b>Рекомендации:</b>\n
        - Увеличить потребление калорий, фокусируясь на полноценном питании.\n
        - Поддерживать регулярный прием пищи, включая 3 основных приема и 2-3 перекуса.\n
        - Включать физическую активность для улучшения аппетита и набора мышечной массы.
    </string>
    <string name="rec_index18_24">
        <b>18.5–24.9 – Норма.</b>\n
        Здоровый диапазон ИМТ.\n
        \n
        <b>Рекомендации:</b>\n
        - Продолжать поддерживать сбалансированное питание с упором на овощи, фрукты, белки (рыба, мясо, яйца, бобовые) и цельные зерна.\n
        - Соблюдать баланс между потребляемыми калориями и физической активностью.\n
        - Регулярная физическая активность: 150-300 минут умеренных аэробных упражнений или 75-150 минут интенсивных нагрузок в неделю.
    </string>
    <string name="rec_index25_29">
        <b>25.0–29.9 – Избыточная масса тела.\n</b>
        Риски для здоровья: Повышенный риск сердечно-сосудистых заболеваний, гипертонии, диабета II типа.\n
        \n
        <b>Рекомендации:</b>\n
        - Умеренное снижение калорийности питания. Избегать обработанных продуктов, сахара и трансжиров.\n
        - Увеличить потребление овощей, цельных зерен и белков.\n
        - Регулярная физическая активность: минимум 150 минут умеренных упражнений в неделю. Это может включать ходьбу, плавание или велосипед.
    </string>
    <string name="rec_index30_34">
        <b>30.0–34.9 – Ожирение I степени.\n</b>
        Риски для здоровья: Высокий риск сердечно-сосудистых заболеваний, диабета, суставных проблем.\n
        \n
        <b>Рекомендации:</b>\n
        - Снижение калорийности на 500–1000 ккал в день для безопасного похудения на 0,5–1 кг в неделю.\n
        - Поддерживать регулярные физические нагрузки: аэробные упражнения + силовые тренировки.\n
        - Контроль уровня сахара и жиров в крови с регулярными проверками.
    </string>
    <string name="rec_index35_39">
        <b>35.0–39.9 – Ожирение II степени.\n</b>
        Риски для здоровья: Очень высокий риск хронических заболеваний, таких как диабет, гипертония, болезни сердца.\n
        \n
        <b>Рекомендации:</b>\n
        - Более строгий контроль за потреблением калорий, уменьшение порций, исключение сладостей, жирных и обработанных продуктов.\n
        - Консультация с диетологом или врачом для составления индивидуальной программы похудения.\n
        - Активное движение и упражнения для сжигания калорий, возможно под наблюдением тренера или специалиста по реабилитации.
    </string>
    <string name="rec_index40">
        <b>Более 40.0 – Ожирение III степени (морбидное ожирение).\n</b>
        Риски для здоровья: Экстремально высокий риск серьезных заболеваний, таких как инфаркт, инсульт, сахарный диабет II типа, онкология.\n
        \n
        <b>Рекомендации:</b>\n
        - Строгий медицинский контроль. Возможно, понадобится комплексная программа похудения, включающая медикаментозное лечение или хирургическое вмешательство (бариатическая хирургия).\n
        - Разработка индивидуального плана питания и тренировок с учетом состояния здоровья.\n
        - Постоянный мониторинг показателей здоровья (уровень сахара, давление и т.д.).
    </string>
</resources>