<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:padding="40dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_ibm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="top|center_horizontal"
        android:text="@string/tv_ibm"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <ImageView
        android:layout_weight="3"
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/index18_24"
        android:src="@drawable/index18_24"
        />

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_rec"
            android:textSize="20sp"
            android:text="@string/rec_index18_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </ScrollView>



</LinearLayout>